# kvcache

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: kvcache.h  kvcache_c_api.h  list.h  options.h  spinlock.h  ssd.h  status.h  thread_safety.h
src/: kvcache.cpp  kvcache_c_api.cpp  kvcache_impl.cpp  ssd.cpp  status.cpp
tests/: fatcache.patch  kvcache_benchmark_test.cpp  kvcache_test.cpp
